tests/ui/borrowck/kernel_move_while_borrowed.stderr
error[RX4005]: cannot move out of `t` while it is borrowed
  --> $DIR/borrowck/kernel_move_while_borrowed.rx:17:14
   |
17 |     let _a = eat(t); //~ ERROR RX4005
   |              ^^^^^^ moved here while borrowed
